--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/jy.jpg      # use absolute URL, seeing it's used in both `/
 # SNS settings
 RSS: false
 # weibo_username:     
-zhihu_username:     白兔去哪儿了
+zhihu_username:     
 github_username:    cathysshelter
 facebook_username:  
 jianshu_username:   
